Changelog
=========

1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2014-12-02)
------------------

- Stay on the footer management view after modifying the portlet blacklist status.
  [mbaechtold]


1.0.0 (2013-09-24)
------------------

- Initial release