@@ -4,7 +4,9 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Do not redirect to manage-footer view after modifying regular portlet
+  managers.
+  [mathias.leimgruber]
 
 
 1.0.1 (2014-12-02)
